# walletkit

./: .cproject  .gitignore  .gitmodules  .project  CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS  LICENSE  LinuxMain.swift  Notes  Package.swift  README.md  WalletKitTestsConfig.sh  build.gradle  package-lock.json  package.json  tsconfig.json
WalletKitCore/: .gitignore  CMakeLists.txt  LinuxMain.swift  Makefile  Package.swift  walletfuzz.c
WalletKitCore/WalletKitCoreExplore/: createtransactions.c  createtransactions.h  main.c
WalletKitCore/WalletKitCorePerf/: main.c
WalletKitCore/WalletKitCoreTests/: WalletKitCoreTests.c  WalletKitCoreTests.swift  XCTestManifests.swift
WalletKitCore/bitcoin/: BRPeerManager.c  BRWalletManager.c
WalletKitCore/crypto/: BRCryptoAccount.c  BRCryptoHash.c  BRCryptoKey.c  BRCryptoNetwork.c  BRCryptoTransfer.c  BRCryptoWallet.c  BRCryptoWalletManager.c  BRCryptoWalletManagerClient.c
WalletKitCore/ethereum/base/: BREthereumAddress.h  BREthereumEther.c  BREthereumHash.h
WalletKitCore/ethereum/bcs/: BREthereumBCS.c  BREthereumBCSSync.c
WalletKitCore/ethereum/contract/: BREthereumContract.c  BREthereumToken.c  BREthereumToken.h
WalletKitCore/ethereum/event/: BREvent.c  BREventAlarm.c
WalletKitCore/ethereum/ewm/: BREthereumEWM.c  BREthereumEWM.h
WalletKitCore/ethereum/les/: BREthereumLES.c
WalletKitCore/ethereum/rlp/: BRRlpCoder.c
WalletKitCore/ethereum/util/: BRUtilMath.c
WalletKitCore/generic/: BRGeneric.c  BRGeneric.h  BRGenericBase.h  BRGenericHandlers.c  BRGenericHandlers.h  BRGenericHedera.c  BRGenericManager.c  BRGenericPrivate.h  BRGenericRipple.c
WalletKitCore/hedera/: BRHederaAccount.c  BRHederaAccount.h  BRHederaAddress.c  BRHederaAddress.h  BRHederaBase.h  BRHederaTransaction.c  BRHederaWallet.c  BRHederaWallet.h
WalletKitCore/include/: BRCryptoAccount.h  BRCryptoAddress.h  BRCryptoAmount.h  BRCryptoBase.h  BRCryptoCipher.h  BRCryptoClient.h  BRCryptoCoder.h  BRCryptoCurrency.h  BRCryptoExportablePaperWallet.h  BRCryptoFeeBasis.h  BRCryptoHash.h  BRCryptoHasher.h  BRCryptoKey.h  BRCryptoListener.h  BRCryptoNetwork.h  BRCryptoPayment.h  BRCryptoPeer.h  BRCryptoSigner.h  BRCryptoSync.h  BRCryptoSystem.h  BRCryptoTransfer.h  BRCryptoUnit.h  BRCryptoWallet.h  BRCryptoWalletManager.h  BRCryptoWalletManagerClient.h  BRCryptoWalletSweeper.h  WKAccount.h  WKAddress.h  WKAmount.h  WKBase.h  WKCipher.h  WKClient.h  WKCoder.h  WKCurrency.h  WKExportablePaperWallet.h  WKFeeBasis.h  WKHash.h  WKHasher.h  WKKey.h  WKListener.h  (+12 more)
WalletKitCore/include/event/: BRCryptoNetwork.h  BRCryptoSystem.h  BRCryptoTransfer.h  BRCryptoWallet.h  BRCryptoWalletManager.h  README.md  WKNetwork.h  WKSystem.h  WKTransfer.h  WKWallet.h  WKWalletManager.h
WalletKitCore/ripple/: BRRippleAccount.c  BRRippleAddress.c  BRRippleAddress.h  BRRippleBase58.c  BRRipplePrivateStructs.h  BRRippleUtils.c
WalletKitCore/src/avalanche/: BRAvalanche.h  BRAvalancheAccount.c  BRAvalancheAccount.h  BRAvalancheAddress.c  BRAvalancheAddress.h  BRAvalancheBase.h  BRAvalancheFeeBasis.c  BRAvalancheFeeBasis.h  BRAvalancheNetwork.c  BRAvalancheNetwork.h  BRAvalancheSupport.c  BRAvalancheSupport.h  BRAvalancheTransaction.c  BRAvalancheTransaction.h  BRAvalancheUtil.c  BRAvalancheUtil.h
WalletKitCore/src/bcash/: BRBCashAddr.c  BRBCashAddr.h  BRBCashParams.c  BRBCashParams.h
WalletKitCore/src/bitcoin/: BRBIP38Key.c  BRBitcoinBloomFilter.c  BRBitcoinBloomFilter.h  BRBitcoinChainParams.c  BRBitcoinChainParams.h  BRBitcoinMerkleBlock.c  BRBitcoinMerkleBlock.h  BRBitcoinPaymentProtocol.c  BRBitcoinPaymentProtocol.h  BRBitcoinPeer.c  BRBitcoinPeer.h  BRBitcoinPeerManager.c  BRBitcoinPeerManager.h  BRBitcoinTransaction.c  BRBitcoinTransaction.h  BRBitcoinWallet.c  BRBitcoinWallet.h  BRBloomFilter.c  BRChainParams.c  BRChainParams.h  BRMerkleBlock.c  BRPaymentProtocol.c  BRPaymentProtocol.h  BRPeer.c  BRPeer.h  BRPeerManager.c  BRSyncManager.c  BRTransaction.c  BRWallet.c  BRWallet.h  BRWalletManager.c  BRWalletManager.h  BRWalletManagerEvent.c  BRWalletManagerPrivate.h  BTCLog.h
WalletKitCore/src/bsv/: BRBSVParams.c  BRBSVParams.h
WalletKitCore/src/crypto/: BRCryptoAccount.c  BRCryptoAccountP.h  BRCryptoAddress.c  BRCryptoAddressP.h  BRCryptoAmount.c  BRCryptoAmountP.h  BRCryptoBase.c  BRCryptoBaseP.h  BRCryptoCipher.c  BRCryptoClient.c  BRCryptoClientP.h  BRCryptoCoder.c  BRCryptoConfig.h  BRCryptoCurrency.c  BRCryptoExportablePaperWallet.c  BRCryptoExportablePaperWalletP.h  BRCryptoFeeBasis.c  BRCryptoFeeBasisP.h  BRCryptoFileService.c  BRCryptoFileService.h  BRCryptoGeneric.c  BRCryptoGenericP.h  BRCryptoHandlers.c  BRCryptoHandlersP.h  BRCryptoHash.c  BRCryptoHashP.h  BRCryptoHasher.c  BRCryptoKey.c  BRCryptoKeyP.h  BRCryptoListener.c  BRCryptoListenerP.h  BRCryptoNetwork.c  BRCryptoNetworkP.h  BRCryptoPayment.c  BRCryptoPaymentP.h  BRCryptoPeer.c  BRCryptoSigner.c  BRCryptoStatus.c  BRCryptoStatusP.h  BRCryptoSystem.c  (+11 more)
WalletKitCore/src/dogecoin/: BRDogecoinParams.c  BRDogecoinParams.h
WalletKitCore/src/ethereum/: BREthereum.h  Makefile
WalletKitCore/src/generic/: BRGeneric.c  BRGeneric.h  BRGenericBase.h  BRGenericClient.h  BRGenericHandlers.h  BRGenericHedera.c  BRGenericManager.c  BRGenericPrivate.h  BRGenericRipple.c  BRGenericTezos.c  BRGenericTezos.h
WalletKitCore/src/hedera/: BRHedera.h  BRHederaAccount.c  BRHederaAccount.h  BRHederaAddress.c  BRHederaAddress.h  BRHederaBase.h  BRHederaCrypto.c  BRHederaCrypto.h  BRHederaFeeBasis.c  BRHederaFeeBasis.h  BRHederaSerialize.c  BRHederaSerialize.h  BRHederaToken.c  BRHederaToken.h  BRHederaTransaction.c  BRHederaTransaction.h  BRHederaWallet.c  BRHederaWallet.h
WalletKitCore/src/litecoin/: BRLitecoinParams.c  BRLitecoinParams.h
WalletKitCore/src/ripple/: BRRipple.h  BRRippleAccount.c  BRRippleAccount.h  BRRippleAddress.c  BRRippleAddress.h  BRRippleBase.h  BRRippleFeeBasis.c  (+14 more)
WalletKitCore/support/: BRAddress.h  BRAssert.c  BRBase58.c  BRFileService.c  BRFileService.h  BROSCompat.c  BROSCompat.h
WalletKitCore/version/: BRCryptoVersion.c
WalletKitJava/CoreNative/: CMakeLists.txt  build.gradle
(+1664 files in other folders)
